// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Url Based - Full Integration Tests MasterCorp Account Service should generate files 1`] = `
Array [
  "class-diagram.html",
  "class-diagram.md",
]
`;

exports[`Url Based - Full Integration Tests MasterCorp Account Service should generate files: class-diagram.html 1`] = `
"<html>
  <head>
    <script src=\\"https://cdn.jsdelivr.net/npm/mermaid/dist/mermaid.min.js\\"></script>
<script>mermaid.initialize({startOnLoad:true});</script>
  </head>
  <body>
    <div class=\\"mermaid\\">
  classDiagram

  Account ..> Contact
  Contact ..> Account
  AccountInsertRequest ..> Contact
  AccountUpdateRequest ..> Contact

  class Account{
    +uuid: id
    +string: refId
    +string: name
    +uuid: parentAccountId
    +bool: isEnabled
    +bool: emailInvoice
    +string: tenantId
    +Account: parentAccount;
    +Contact[]: contacts;
    +Account[]: inverseParentAccount;
  }
  class Contact{
    +uuid: id
    +bool: isEnabled
    +string: contactTypeId
    +uuid: accountId
    +string: firstName
    +string: lastName
    +string: middleName
    +string: addressLine1
    +string: addressLine2
    +string: city
    +string: state
    +string: zip
    +string: emails
    +string: phone1
    +string: phone2
    +Account: account;
  }
  class AccountInsertRequest{
    +uuid: id
    +string: refId
    +string: name
    +uuid: parentAccountId
    +bool: emailInvoice
    +Contact[]: contacts;
  }
  class AccountUpdateRequest{
    +uuid: id
    +string: refId
    +string: name
    +uuid: parentAccountId
    +bool: isEnabled
    +bool: emailInvoice
    +Contact[]: contacts;
  }
  class ContactInsertRequest{
    +uuid: id
    +string: contactTypeId
    +uuid: accountId
    +string: firstName
    +string: lastName
    +string: middleName
    +string: addressLine1
    +string: addressLine2
    +string: city
    +string: state
    +string: zip
    +string: emails
    +string: phone1
    +string: phone2
  }
  class ContactUpdateRequest{
    +uuid: id
    +string: contactTypeId
    +uuid: accountId
    +string: firstName
    +string: lastName
    +string: middleName
    +string: addressLine1
    +string: addressLine2
    +string: city
    +string: state
    +string: zip
    +string: emails
    +string: phone1
    +string: phone2
  }
    </div>
  <div style=\\"font-family: Arial, Helvetica, sans-serif; font-size: small;\\">
    This file was generated by the <a href=\\"https://www.npmjs.com/package/openapi-mermaid\\">openapi-mermaid</a> tool.
  </div>
  </body>

  </body>
</html>
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Account Service should generate files: class-diagram.md 1`] = `
"\`\`\`mermaid
classDiagram

  Account ..> Contact
  Contact ..> Account
  AccountInsertRequest ..> Contact
  AccountUpdateRequest ..> Contact

  class Account{
    +uuid: id
    +string: refId
    +string: name
    +uuid: parentAccountId
    +bool: isEnabled
    +bool: emailInvoice
    +string: tenantId
    +Account: parentAccount;
    +Contact[]: contacts;
    +Account[]: inverseParentAccount;
  }
  class Contact{
    +uuid: id
    +bool: isEnabled
    +string: contactTypeId
    +uuid: accountId
    +string: firstName
    +string: lastName
    +string: middleName
    +string: addressLine1
    +string: addressLine2
    +string: city
    +string: state
    +string: zip
    +string: emails
    +string: phone1
    +string: phone2
    +Account: account;
  }
  class AccountInsertRequest{
    +uuid: id
    +string: refId
    +string: name
    +uuid: parentAccountId
    +bool: emailInvoice
    +Contact[]: contacts;
  }
  class AccountUpdateRequest{
    +uuid: id
    +string: refId
    +string: name
    +uuid: parentAccountId
    +bool: isEnabled
    +bool: emailInvoice
    +Contact[]: contacts;
  }
  class ContactInsertRequest{
    +uuid: id
    +string: contactTypeId
    +uuid: accountId
    +string: firstName
    +string: lastName
    +string: middleName
    +string: addressLine1
    +string: addressLine2
    +string: city
    +string: state
    +string: zip
    +string: emails
    +string: phone1
    +string: phone2
  }
  class ContactUpdateRequest{
    +uuid: id
    +string: contactTypeId
    +uuid: accountId
    +string: firstName
    +string: lastName
    +string: middleName
    +string: addressLine1
    +string: addressLine2
    +string: city
    +string: state
    +string: zip
    +string: emails
    +string: phone1
    +string: phone2
  }
\`\`\`
This file was generated by the [openapi-mermaid](https://www.npmjs.com/package/openapi-mermaid) tool.
"
`;
